Add new-post email notifications
